--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,8 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+
+aclImdb/
+enwiki_upos_skipgram_300_5_2017/model.bin
+enwiki_upos_skipgram_300_5_2017/model.txt
